--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/175/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/175/index.mdx
@@ -59,21 +59,21 @@ Aujourd'hui, j'ai découvert [Vinxi](https://vinxi.vercel.app/), une boîte à o
 ---
 
 - 💸 [Explore how to build a feature-rich PDF Viewer in React with Apryse's rendering engine. Customize UI, scroll, zoom, and search with annotations.](https://apryse.com/blog/build-custom-react-pdf-viewer?utm_source=thisweekinreact2&utm_medium=email&utm_campaign=newsletter2)
-- 📜 [Avoiding Hydration Mismatches with useSyncExternalStore](https://tkdodo.eu/blog/avoiding-hydration-mismatches-with-use-sync-external-store): Another great article from Dominik explaining how `useSyncExternalStore` and its 2 client/server snapshot callbacks can help prevent hydration mismatches. It can be a better alternative to useEffect for many use-cases, including rendering localized dates, or creating a client-only wrapper component.
-- 📜 [Exploring Next.js Forms with Server Actions](https://www.robinwieruch.de/next-forms/): A very comprehensive step-by-step tutorial on using the new React/Next.js form primitives without any abstractions, and all the little mistakes you might make along the way.
-- 📜 [No Outer margin](https://kyleshevlin.com/no-outer-margin/): Gives good reasons to not apply margins inside your component root, but instead let the parent component handle the layout. Margins are the first thing that come to mind, but there are also other CSS rules that break component encapsulation. I recovered a great deleted article for you on that matter: [Layout-isolated components](https://web.archive.org/web/20201024040746/https://visly.app/blog/layout-isolated-components).
-- 📜 [Vjeux - 12 Years at Meta](https://blog.vjeux.com/2024/project/12-years-at-meta.html): If you are a new React developer, you may not have heard of Christopher Chedeau, but he’s one of the most impactful member of our community. A few things he created or significantly contributed to: React, React Native, Yoga, CSS-in-JS, Prettier, Excalidraw, Docusaurus, GraphQL…
-- 📜 [Learning Four Key Primitives In Solid](https://www.brenelz.com/posts/learning-four-key-primitives-in-solid/): Don’t be mislead by the title, it’s a great article for React devs, comparing Solid vs React, Next.js and Remix on 4 interesting topics. TIL that Next.js RSC components would waterfall by default unless you use a preloading function.
-- 📜 [Handle both JSON and FormData in Remix](https://www.jacobparis.com/content/conform-json-formdata): Jacob explains the tradeoffs of using form inputs vs creating a FormData or JSON payload manually on an event handler. Shows how to create an Remix abstraction using Zod and Conform that can conveniently accept both JSON and FormData paylods.
-- 📜 [Introducing Waku Land](https://interbolt.org/blog/waku-land/): A live deployment of every Waku examples.
-- 📜 [Where to host your Remix app in 2024](https://www.jacobparis.com/content/where-to-host-remix?ref=twitter): Updated on 25 Feb.
-- 📜 [HTMX vs React - A Complete Comparison](https://semaphoreci.com/blog/htmx-react): The article suggests to use React for rich web experiences, and use HTMX for pages with simpler interactivity.
+- 📜 [Avoiding Hydration Mismatches with useSyncExternalStore](https://tkdodo.eu/blog/avoiding-hydration-mismatches-with-use-sync-external-store) : Un autre excellent article de Dominik expliquant comment `useSyncExternalStore` et ses 2 callbacks client/serveur de snapshot peuvent aider à éviter les déséquilibres de l'hydratation. Cela peut être une meilleure alternative à useEffect pour de nombreux cas d'utilisation, y compris le rendu de dates localisées, ou la création d'un composant enveloppe uniquement pour le client.
+- 📜 [Exploring Next.js Forms with Server Actions](https://www.robinwieruch.de/next-forms/) : Un tutoriel très complet, étape par étape, sur l'utilisation des nouvelles primitives de formulaire React/Next.js sans aucune abstraction, et toutes les petites erreurs que vous pourriez faire en cours de route.
+- 📜 [No Outer margin](https://kyleshevlin.com/no-outer-margin/) : Présente de bonnes raisons de ne pas appliquer de marges à l'intérieur de la racine de votre composant, mais de laisser le composant parent s'occuper de la mise en page. Les marges sont la première chose qui nous vient à l'esprit, mais il y a aussi d'autres règles CSS qui ne respectent pas l'encapsulation des composants. J'ai récupéré un excellent article supprimé à ce sujet : [Layout-isolated components](https://web.archive.org/web/20201024040746/https://visly.app/blog/layout-isolated-components).
+- 📜 [Vjeux - 12 Years at Meta](https://blog.vjeux.com/2024/project/12-years-at-meta.html) : Si vous êtes un nouveau développeur React, vous n'avez peut-être pas entendu parler de Christopher Chedeau, mais c'est l'un des membres les plus influents de notre communauté. Voici quelques exemples de choses qu'il a créées ou auxquelles il a contribué de manière significative : React, React Native, Yoga, CSS-in-JS, Prettier, Excalidraw, Docusaurus, GraphQL...
+- 📜 [Learning Four Key Primitives In Solid](https://www.brenelz.com/posts/learning-four-key-primitives-in-solid/) : Ne vous laissez pas berner par le titre, c'est un excellent article pour les développeurs React, comparant Solid vs React, Next.js et Remix sur 4 sujets intéressants. A noter que les composants RSC de Next.js sont waterfall par défaut à moins que vous n'utilisiez une fonction de preloading.
+- 📜 [Handle both JSON and FormData in Remix](https://www.jacobparis.com/content/conform-json-formdata) : Jacob explique les compromis entre l'utilisation des inputs de formulaire et la création manuelle d'un chargement d'un FormData ou d'un JSON depuis un gestionnaire d'événement. Il montre comment créer une abstraction Remix à l'aide de Zod et Conform qui peut accepter de manière pratique des chargements à la fois de JSON et de FormData.
+- 📜 [Introducing Waku Land](https://interbolt.org/blog/waku-land/) : Un déploiement en temps réel de tous les exemples de Waku.
+- 📜 [Where to host your Remix app in 2024](https://www.jacobparis.com/content/where-to-host-remix?ref=twitter) : Mise à jour du 25 février.
+- 📜 [HTMX vs React - A Complete Comparison](https://semaphoreci.com/blog/htmx-react) : L'article suggère d'utiliser React pour les expériences web riches, et d'utiliser HTMX pour les pages avec une interactivité plus simple.
 - 📜 [Next.js vs. Remix - A Developer's Dilemma](https://blog.saeloun.com/2024/02/21/next.js-vs-remix/)
-- 📜 [Compiler Theory and Reactivity](https://www.recompiled.dev/blog/ssa/): Sathya works on React Forget and explains a compiler theory pass they use called Static Single Assignment form. I have to admit I’m a bit lost here 😅. His previous post on [Alias analysis](https://www.recompiled.dev/blog/alias-analysis/) is easier to understand.
+- 📜 [Compiler Theory and Reactivity](https://www.recompiled.dev/blog/ssa/) : Sathya travaille sur React Forget et explique une technique théorique de compilation qu'ils utilisent appelée Static Single Assignment form. Je dois admettre que je suis un peu perdu 😅. Son post précédent sur [Alias analysis](https://www.recompiled.dev/blog/alias-analysis/) est plus facile à comprendre.
 - 📜 [How to Style Active Links in Next.js App Router](https://spacejelly.dev/posts/how-to-style-active-links-in-next-js-app-router)
 - 📜 [Add Dynamic Sitemap to Next.js Website Using Pages or App Directory](https://claritydev.net/blog/nextjs-dynamic-sitemap-pages-app-directory)
-- 📦 [@react-three/uikit - Build performant 3D user interfaces using react-three/fiber and yoga](https://github.com/pmndrs/uikit): New Poimandres collective package preview with an impressive 🐦 [demo](https://twitter.com/0xca0a/status/1762069894932160943)
-- 🎥 [Ryan Toronto - Asset loading in React 19](https://www.youtube.com/watch?v=dxWLp-8mXes): Explains a quite unknown but exciting upcoming React feature that lets you load assets (here CSS) of the next page before completing the navigation transition.
+- 📦 [@react-three/uikit - Build performant 3D user interfaces using react-three/fiber and yoga](https://github.com/pmndrs/uikit): Nouveau package du collectif Poimandres en preview avec une impressionnante 🐦 [démo](https://twitter.com/0xca0a/status/1762069894932160943)
+- 🎥 [Ryan Toronto - Asset loading in React 19](https://www.youtube.com/watch?v=dxWLp-8mXes) : Explique une fonctionnalité de React assez méconnue mais passionnante à venir qui vous permet de charger les ressources (ici du CSS) de la page suivante avant de terminer la transition de navigation.
 - 🎥 [Jack Herrington - React Hook Form & React 19 Form Actions, The Right Way](https://www.youtube.com/watch?v=VLk45JBe8L8)
 - 🎥 [Fireship - They made React great again? (React Labs)](https://www.youtube.com/watch?v=4k6Xgjqkad4)
 - 🎥 [Fireship - This UI component library is mind-blowing (Aceternity Components)](https://www.youtube.com/watch?v=RPa3_AD1_Vs)
