--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/176/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/176/index.mdx
@@ -153,11 +153,8 @@ Very interesting insights and impressive results. I hope the Shopify team keeps 
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
-
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+- 🎥 [Melvyn - L'histoire de Tailwind CSS](https://www.youtube.com/watch?v=zngIwDVQfdA)
+- 🎥 [DevTheory - Actus JS de la semaine - Vercel gère les DDOS ?](https://www.youtube.com/watch?v=JfB6IkP6GAg)
 
 ---
 
