--- a/website/newsletter/177/index.mdx
+++ b/website/newsletter/177/index.mdx
@@ -1,16 +1,15 @@
 ---
 slug: /177
-title: "This Week In React #177: ..."
+title: "This Week In React #177: Skia, Pigment, Mist, Storybook, shadcn/ui, Hydration Diff, Geiger, MDXTS, Remotion, WinterJS, Astro, Rolldown, Tailwind, TypeScript, Biome, INP..."
 authors: [slorber]
 date: 03-13-2024
-unlisted: true
 ---
 
 Hi everyone!
 
-PROMO CONFS FR + code promo
+This week it's particularly exciting to see React Native Skia reaching 1.0. But we also have many other interesting releases to look at: Pigment, Storybook, Tailwind, Rolldown, Geist, Mist, MDXTS...
 
-<Todo />
+I'm trying to monitor more closely weak signals (PRs, RFCs and tweets), do you find this kind of news valuable?
 
 <!-- truncate -->
 
