--- a/website/newsletter/177/index.mdx
+++ b/website/newsletter/177/index.mdx
@@ -7,7 +7,9 @@ date: 03-13-2024
 
 Hi everyone!
 
-This week it's particularly exciting to see React Native Skia reaching 1.0. But we also have many other interesting releases to look at: Pigment, Storybook, Tailwind, Rolldown, Geist, Mist, MDXTS...
+This week it's particularly exciting to see React Native Skia reaching 1.0. But we also have many other interesting releases to look at: Pigment, Storybook, Tailwind, Rolldown, MDXTS...
+
+There were also some fun ones, such as Mist and Geist. I'm really curious to know what you think of them. Would you use these?
 
 I'm trying to monitor more closely weak signals (PRs, RFCs and tweets), do you find this kind of news valuable?
 
