--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/177/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/177/index.mdx
@@ -70,11 +70,8 @@ Refine enables teams to rapidly develop production-ready apps while maintaining 
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
-
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+- 🎥 [Apprendre TypeScript en juste 5 Minutes (2024)](https://www.youtube.com/watch?v=Lgvt9mN23qM)
+- 🎙️ [Double Slash - Les News Web Dev mars 2024 - React Compiler, Rolldown, Tailwind, PWA…](https://double-slash.dev/podcasts/news-03-24/)
 
 ---
 
